# Archive-AI

./: .env.example  .gitignore  .gitmodules  BOLT_XL_FIX.md  CHANGES-2025-12-28.md  CLAUDE.md  CLOUDFLARE_SETUP.md  CONFIG.md  CURRENT_STATUS.md  DEPLOYMENT.md  GEMINI.MD  GITHUB_SETUP.md  IMPLEMENTATION_COMPLETE.md  PERFORMANCE.md  QUICKSTART.md  QUICKSTART_UI.md  README.md  agent-test-results-20251228-004429.json  agent-test-results-20260106-074641.json  cloudflared-service-fixed.txt  config-cloudflare-fixed.yml  docker-compose.awq-7b.yml  docker-compose.cloudflare-fixed.yml  docker-compose.cloudflare.yml  docker-compose.prod.yml  docker-compose.yml  go-cloudflare.sh  go.sh  package-lock.json  payload.json  requirements.txt  shutdown.sh  start  test-results-20251228-000131.json  test-results-20251228-000330.json  test-results-20251228-005608.json  test_rlm.json
archive-ai-rs/crates/brain/: Cargo.toml
archive-ai-rs/crates/brain/src/: main.rs
archive-ai-rs/crates/brain/src/agents/: mod.rs  react.rs
archive-ai-rs/crates/brain/src/routes/: chat.rs  config.rs  health.rs  metrics.rs  mod.rs
archive-ai-rs/crates/brain/src/services/: memory.rs  mod.rs  redis_client.rs  vector_store.rs
archive-ai-rs/crates/brain/src/workers/: memory.rs
archive-ai-rs/crates/librarian/: Cargo.toml
archive-ai-rs/crates/librarian/src/: main.rs  processor.rs  watcher.rs
bolt-xl/: Cargo.toml  Dockerfile  Dockerfile.autoawq  Dockerfile.real  Dockerfile.transformers  README.md  TECHNICAL.md  build.rs  dummy_sed_check.txt  requirements.txt  server.py  server_transformers.py  start.sh
bolt-xl/.cargo/: config.toml
bolt-xl/benches/: throughput_latency.rs
bolt-xl/examples/: benchmark.rs  cpu_benchmark.rs  end_to_end_test.rs  inference_benchmark.rs  simple_inference_bench.rs  test_coherence.rs  test_gemma_arch.rs  test_hub.rs  thorough_inference.rs  verify_awq_unpack.rs
bolt-xl/src/: config.rs  lib.rs  main.rs  server.rs
bolt-xl/src/engine/: block_manager.rs  llm_engine.rs  mod.rs  model_executor.rs  sampling.rs  scheduler.rs  sequence.rs
bolt-xl/src/kernels/: awq_dequant.cu  fused_sampling.cu
bolt-xl/src/kernels/marlin/: marlin_cuda_kernel.cu  marlin_cuda_kernel.cuh
bolt-xl/src/layers/: attention.rs  kernels.rs  linear.rs  marlin.rs  marlin_repack.rs  mod.rs  quantization.rs  rotation.rs
bolt-xl/static/: index.html
(+249 files in other folders)
