[package]
name = "bolt-xl"
version = "0.1.0"
edition = "2021"

[features]
default = ["cuda"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
cpu = []

[dependencies]
candle-core = { version = "0.8.2", default-features = false }
candle-nn = { version = "0.8.2", default-features = false }
candle-transformers = { version = "0.8.2", default-features = false }
ort = { version = "2.0.0-rc.11", optional = true }
tokio = { version = "1.32", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
hf-hub = "0.3"
tokenizers = "0.20"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.6", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
half = "2.3"
rand = "0.8"
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }
async-stream = "0.3"
futures = "0.3"
safetensors = "0.4"
thiserror = "1.0"
ureq = { version = "2.12", default-features = false }
redis = { version = "0.24", features = ["tokio-comp"] }

[build-dependencies]
cc = "1.2.52"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "throughput_latency"
harness = false